# OpenCV_HOG_Feature_Extractor

./: .gitignore  CMakeLists.txt  hog.cpp  hogtrain.cpp  libsvmexport.cpp  svmdetector.cpp  svmexport.cpp  svmlightexport.cpp  svmtrain.cpp  svmtrainhog.cpp
